# SmartConfClaw

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bot_endpoint.rs  main.rs
src/components/: FloatingController.tsx  GraphViewer.tsx  KnowledgeGraphNode.tsx  NetworkGraphView.tsx  QAPanel.tsx  RegionSelector.tsx  SessionQaChat.tsx  SessionQaMarkdown.tsx  SessionViewer.tsx  SettingsPanel.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  scroll-area.tsx  tooltip.tsx
src/lib/: dagreLayout.ts  graphNormalize.ts  i18n.ts  mockData.ts  tauri.ts  windowLabel.ts
src/store/: settingsStore.ts  uiStore.ts
src/types/: index.ts
