[package]
name = "scholarclaw"
version = "0.1.0"
description = "ScholarClaw desktop app"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Release build: remove debug symbols so DMG won't leak symbol information.
strip = "symbols"
debug = 0
incremental = false
lto = true
codegen-units = 1
panic = "abort"
