[package]
name = "scholarclaw"
version = "0.1.0"
description = "ScholarClaw desktop app"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = { version = "0.7", features = ["json"] }
base64 = "0.22"
image = { version = "0.25.10", default-features = false, features = ["png"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Release build: remove debug symbols so DMG won't leak symbol information.
strip = "symbols"
debug = 0
incremental = false
lto = true
codegen-units = 1
panic = "abort"
